로그인 수정, 메인페이지(home) 일부 작성